set(TARGET_NAME dcerpc-samba)

set(TARGET_SRC
        ${SMB_SRC_ROOT}/bin/default/librpc/dcerpc-samba.empty.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_eventlog_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_spoolss_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_netlogon_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_samr_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_dfs_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_lsa_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_srvsvc_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_svcctl_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_dnsserver_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_epmapper_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_wkssvc_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_atsvc_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_winreg_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_ntsvcs_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_echo_c.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_initshutdown_c.c
)

add_library(
        ${TARGET_NAME}
        STATIC
        ${TARGET_SRC}
)

target_include_directories(
        ${TARGET_NAME}
        PRIVATE
        ${SMB_SRC_ROOT}
        ${SMB_SRC_ROOT}/dynconfig
        ${SMB_SRC_ROOT}/lib
        ${SMB_SRC_ROOT}/lib/tsocket
        ${SMB_SRC_ROOT}/lib/replace
        ${SMB_SRC_ROOT}/lib/talloc
        ${SMB_SRC_ROOT}/lib/tevent
        ${SMB_SRC_ROOT}/lib/ldb-samba
        ${SMB_SRC_ROOT}/lib/ldb/include
        ${SMB_SRC_ROOT}/lib/tdb/include
        ${SMB_SRC_ROOT}/include
        ${SMB_SRC_ROOT}/include/public
        ${SMB_SRC_ROOT}/source3
        ${SMB_SRC_ROOT}/source3/include
        ${SMB_SRC_ROOT}/source3/lib
        ${SMB_SRC_ROOT}/source4/heimdal_build
        ${SMB_SRC_ROOT}/source4/heimdal_build/include
        ${SMB_SRC_ROOT}/source4/heimdal/lib
        ${SMB_SRC_ROOT}/source4/heimdal/base
        ${SMB_SRC_ROOT}/source4/heimdal/lib/krb5
        ${SMB_SRC_ROOT}/source4/heimdal/lib/roken
        ${SMB_SRC_ROOT}/source4/heimdal/lib/com_err
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1
        ${SMB_SRC_ROOT}/source4/heimdal/lib/wind
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hx509
        ${SMB_SRC_ROOT}/source4/heimdal/lib/gssapi
        ${SMB_SRC_ROOT}/source4/heimdal/lib/gssapi/gssapi
        ${SMB_SRC_ROOT}/source4/heimdal/lib/gssapi/mech
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hcrypto
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hcrypto/libtommath
        ${SMB_SRC_ROOT}/source4/heimdal/include
        ${SMB_SRC_ROOT}/third_party/gpfs
        ${SMB_SRC_ROOT}/bin/default/source3
        ${SMB_SRC_ROOT}/bin/default
        ${SMB_SRC_ROOT}/bin/default/include
        ${SMB_SRC_ROOT}/bin/default/lib/ldb/include
        ${SMB_SRC_ROOT}/bin/default/librpc/
        ${SMB_SRC_ROOT}/bin/default/source3/librpc/gen_ndr
        ${SMB_SRC_ROOT}/bin/default/source4
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/wind
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/hx509
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/krb5
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/gssapi
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/gssapi/spnego
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/gssapi/krb5
)

target_compile_definitions(
        ${TARGET_NAME}
        PRIVATE
        _SAMBA_BUILD_=4
        HAVE_CONFIG_H=1
        _GNU_SOURCE=1
        _XOPEN_SOURCE_EXTENDED=1
        HAVE_CONFIG_H=1
        __STDC_WANT_LIB_EXT1__=1
        _REENTRANT
)

target_compile_options(
        ${TARGET_NAME}
        PRIVATE
        -MMD
        -fPIC
        -fstack-protector-strong
        -fstack-clash-protection
)
