set(TARGET_NAME ndr-standard)

set(TARGET_SRC
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_eventlog6.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_spoolss.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_atsvc.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_samr.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_winreg.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_dfs.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_wkssvc.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_eventlog.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_ntsvcs.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_server_id.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_initshutdown.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_echo.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_dssetup.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_netlogon.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_notify.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_srvsvc.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_svcctl.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_file_id.c
        ${SMB_SRC_ROOT}/bin/default/librpc/gen_ndr/ndr_lsa.c
        ${SMB_SRC_ROOT}/bin/default/librpc/ndr-standard.empty.c
        ${SMB_SRC_ROOT}/librpc/ndr/ndr_spoolss_buf.c
        ${SMB_SRC_ROOT}/librpc/ndr/ndr_svcctl.c
        ${SMB_SRC_ROOT}/librpc/ndr/ndr_netlogonDUP.c
)

add_library(
        ${TARGET_NAME}
        STATIC
        ${TARGET_SRC}
)

target_include_directories(
        ${TARGET_NAME}
        PRIVATE
        ${SMB_SRC_ROOT}
        ${SMB_SRC_ROOT}/lib
        ${SMB_SRC_ROOT}/lib/replace
        ${SMB_SRC_ROOT}/lib/talloc
        ${SMB_SRC_ROOT}/lib/tevent
        ${SMB_SRC_ROOT}/lib/tdb/include
        ${SMB_SRC_ROOT}/include
        ${SMB_SRC_ROOT}/include/public
        ${SMB_SRC_ROOT}/source4
        ${SMB_SRC_ROOT}/source4/lib
        ${SMB_SRC_ROOT}/source4/include
        ${SMB_SRC_ROOT}/source4/heimdal_build
        ${SMB_SRC_ROOT}/source4/heimdal_build/include
        ${SMB_SRC_ROOT}/source4/heimdal/lib
        ${SMB_SRC_ROOT}/source4/heimdal/lib/roken
        ${SMB_SRC_ROOT}/source4/heimdal/lib/com_err
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1
        ${SMB_SRC_ROOT}/source4/heimdal/lib/wind
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hx509
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hcrypto
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hcrypto/libtommath
        ${SMB_SRC_ROOT}/source4/heimdal/include
        ${SMB_SRC_ROOT}/third_party/gpfs
        ${SMB_SRC_ROOT}/bin/default
        ${SMB_SRC_ROOT}/bin/default/include
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/wind
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/hx509
)

target_compile_definitions(
        ${TARGET_NAME}
        PRIVATE
        _SAMBA_BUILD_=4
        HAVE_CONFIG_H=1
        _GNU_SOURCE=1
        _XOPEN_SOURCE_EXTENDED=1
        HAVE_CONFIG_H=1
        __STDC_WANT_LIB_EXT1__=1
        _REENTRANT
)

target_compile_options(
        ${TARGET_NAME}
        PRIVATE
        -MMD
        -fPIC
        -fstack-protector-strong
        -fstack-clash-protection
)
