set(TARGET_NAME samba-passdb)

set(TARGET_SRC
        ${SMB_SRC_ROOT}/source3/passdb/pdb_get_set.c
        ${SMB_SRC_ROOT}/source3/passdb/passdb.c
        ${SMB_SRC_ROOT}/source3/lib/util_wellknown.c
        ${SMB_SRC_ROOT}/source3/lib/util_builtin.c
        ${SMB_SRC_ROOT}/source3/passdb/pdb_compat.c
        ${SMB_SRC_ROOT}/source3/lib/util_sid_passdb.c
        ${SMB_SRC_ROOT}/source3/lib/util_unixsids.c
        ${SMB_SRC_ROOT}/source3/passdb/lookup_sid.c
        ${SMB_SRC_ROOT}/source3/passdb/login_cache.c
        ${SMB_SRC_ROOT}/source3/passdb/account_pol.c
        ${SMB_SRC_ROOT}/source3/lib/privileges.c
        ${SMB_SRC_ROOT}/source3/lib/util_nscd.c
        ${SMB_SRC_ROOT}/source3/lib/winbind_util.c
        ${SMB_SRC_ROOT}/source3/passdb/pdb_util.c
        ${SMB_SRC_ROOT}/source3/passdb/pdb_interface.c
        ${SMB_SRC_ROOT}/source3/passdb/pdb_secrets.c
        ${SMB_SRC_ROOT}/bin/default/source3/samba-passdb.empty.c
        ${SMB_SRC_ROOT}/source3/lib/server_mutex.c
        ${SMB_SRC_ROOT}/source3/passdb/pdb_tdb.c
        ${SMB_SRC_ROOT}/source3/groupdb/mapping.c
        ${SMB_SRC_ROOT}/source3/groupdb/mapping_tdb.c
        ${SMB_SRC_ROOT}/source3/passdb/pdb_smbpasswd.c
)

add_library(
        ${TARGET_NAME}
        STATIC
        ${TARGET_SRC}
)

target_include_directories(
        ${TARGET_NAME}
        PRIVATE
        ${SMB_SRC_ROOT}/source3
        ${SMB_SRC_ROOT}/bin/default/source3
        ${SMB_SRC_ROOT}/source3/include
        ${SMB_SRC_ROOT}/bin/default/source3/include
        ${SMB_SRC_ROOT}/source3/lib
        ${SMB_SRC_ROOT}/bin/default/source3/lib
        ${SMB_SRC_ROOT}/source4/heimdal/lib/com_err
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/com_err
        ${SMB_SRC_ROOT}/source4/heimdal/lib/krb5
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/krb5
        ${SMB_SRC_ROOT}/source4/heimdal/lib/gssapi
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/gssapi
        ${SMB_SRC_ROOT}/source4/heimdal/lib/gssapi/gssapi
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/gssapi/gssapi
        ${SMB_SRC_ROOT}/source4/heimdal_build/include
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal_build/include
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/asn1
        ${SMB_SRC_ROOT}/source4/heimdal/lib/asn1
        ${SMB_SRC_ROOT}/lib/tdb/include
        ${SMB_SRC_ROOT}/bin/default/lib/tdb/include
        ${SMB_SRC_ROOT}/lib/tevent
        ${SMB_SRC_ROOT}/bin/default/lib/tevent
        ${SMB_SRC_ROOT}/lib/talloc
        ${SMB_SRC_ROOT}/bin/default/lib/talloc
        ${SMB_SRC_ROOT}/include/public
        ${SMB_SRC_ROOT}/bin/default/include/public
        ${SMB_SRC_ROOT}/source4
        ${SMB_SRC_ROOT}/bin/default/source4
        ${SMB_SRC_ROOT}/lib
        ${SMB_SRC_ROOT}/bin/default/lib
        ${SMB_SRC_ROOT}/source4/lib
        ${SMB_SRC_ROOT}/bin/default/source4/lib
        ${SMB_SRC_ROOT}/source4/include
        ${SMB_SRC_ROOT}/bin/default/source4/include
        ${SMB_SRC_ROOT}/include
        ${SMB_SRC_ROOT}/bin/default/include
        ${SMB_SRC_ROOT}/lib/replace
        ${SMB_SRC_ROOT}/bin/default/lib/replace
        ${SMB_SRC_ROOT}/.
        ${SMB_SRC_ROOT}/bin/default/
        ${SMB_SRC_ROOT}/librpc
        ${SMB_SRC_ROOT}/bin/default/librpc
        ${SMB_SRC_ROOT}/source4/heimdal_build
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal_build
        ${SMB_SRC_ROOT}/lib/util/home/user/samba/third_party/gpfs
        ${SMB_SRC_ROOT}/bin/default/lib/util/home/user/samba/third_party/gpfs
        ${SMB_SRC_ROOT}/libcli/auth
        ${SMB_SRC_ROOT}/bin/default/libcli/auth
        ${SMB_SRC_ROOT}/source4/heimdal/lib/roken
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/roken
        ${SMB_SRC_ROOT}/source4/heimdal/include
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/include
        ${SMB_SRC_ROOT}/dynconfig
        ${SMB_SRC_ROOT}/bin/default/dynconfig
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hx509
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/hx509
        ${SMB_SRC_ROOT}/libcli/lsarpc
        ${SMB_SRC_ROOT}/bin/default/libcli/lsarpc
        ${SMB_SRC_ROOT}/source4/lib/socket
        ${SMB_SRC_ROOT}/bin/default/source4/lib/socket
        ${SMB_SRC_ROOT}/libcli/util
        ${SMB_SRC_ROOT}/bin/default/libcli/util
        ${SMB_SRC_ROOT}/source4/lib/messaging
        ${SMB_SRC_ROOT}/bin/default/source4/lib/messaging
        ${SMB_SRC_ROOT}/libds/common
        ${SMB_SRC_ROOT}/bin/default/libds/common
        ${SMB_SRC_ROOT}/source4/dsdb
        ${SMB_SRC_ROOT}/bin/default/source4/dsdb
        ${SMB_SRC_ROOT}/source4/lib/tls
        ${SMB_SRC_ROOT}/bin/default/source4/lib/tls
        ${SMB_SRC_ROOT}/auth/credentials
        ${SMB_SRC_ROOT}/bin/default/auth/credentials
        ${SMB_SRC_ROOT}/lib/param
        ${SMB_SRC_ROOT}/bin/default/lib/param
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hcrypto
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/hcrypto
        ${SMB_SRC_ROOT}/source4/heimdal/lib
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib
        ${SMB_SRC_ROOT}/source4/libcli
        ${SMB_SRC_ROOT}/bin/default/source4/libcli
        ${SMB_SRC_ROOT}/source3/librpc
        ${SMB_SRC_ROOT}/bin/default/source3/librpc
        ${SMB_SRC_ROOT}/lib/krb5_wrap
        ${SMB_SRC_ROOT}/bin/default/lib/krb5_wrap
        ${SMB_SRC_ROOT}/nsswitch/libwbclient
        ${SMB_SRC_ROOT}/bin/default/nsswitch/libwbclient
        ${SMB_SRC_ROOT}/source4/lib/events
        ${SMB_SRC_ROOT}/bin/default/source4/lib/events
        ${SMB_SRC_ROOT}/libcli/ldap
        ${SMB_SRC_ROOT}/bin/default/libcli/ldap
        ${SMB_SRC_ROOT}/source4/auth/kerberos
        ${SMB_SRC_ROOT}/bin/default/source4/auth/kerberos
        ${SMB_SRC_ROOT}/lib/smbconf
        ${SMB_SRC_ROOT}/bin/default/lib/smbconf
        ${SMB_SRC_ROOT}/lib/ldb/include
        ${SMB_SRC_ROOT}/bin/default/lib/ldb/include
        ${SMB_SRC_ROOT}/lib/ldb
        ${SMB_SRC_ROOT}/bin/default/lib/ldb
        ${SMB_SRC_ROOT}/auth
        ${SMB_SRC_ROOT}/bin/default/auth
        ${SMB_SRC_ROOT}/lib/util/charset
        ${SMB_SRC_ROOT}/bin/default/lib/util/charset
        ${SMB_SRC_ROOT}/lib/messaging
        ${SMB_SRC_ROOT}/bin/default/lib/messaging
        ${SMB_SRC_ROOT}/auth/kerberos
        ${SMB_SRC_ROOT}/bin/default/auth/kerberos
        ${SMB_SRC_ROOT}/lib/ldb-samba
        ${SMB_SRC_ROOT}/bin/default/lib/ldb-samba
        ${SMB_SRC_ROOT}/source4/heimdal/lib/gssapi/spnego
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/gssapi/spnego
        ${SMB_SRC_ROOT}/source4/heimdal/lib/gssapi/krb5
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/gssapi/krb5
        ${SMB_SRC_ROOT}/source4/heimdal/lib/gssapi/mech
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/gssapi/mech
        ${SMB_SRC_ROOT}/source4/param
        ${SMB_SRC_ROOT}/bin/default/source4/param
        ${SMB_SRC_ROOT}/lib/tsocket
        ${SMB_SRC_ROOT}/bin/default/lib/tsocket
        ${SMB_SRC_ROOT}/source4/heimdal/base
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/base
        ${SMB_SRC_ROOT}/lib/audit_logging
        ${SMB_SRC_ROOT}/bin/default/lib/audit_logging
        ${SMB_SRC_ROOT}/lib/async_req
        ${SMB_SRC_ROOT}/bin/default/lib/async_req
        ${SMB_SRC_ROOT}/source4/heimdal/lib/hcrypto/libtommath
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/hcrypto/libtommath
        ${SMB_SRC_ROOT}/libcli/registry
        ${SMB_SRC_ROOT}/bin/default/libcli/registry
        ${SMB_SRC_ROOT}/source3/param
        ${SMB_SRC_ROOT}/bin/default/source3/param
        ${SMB_SRC_ROOT}/lib/dbwrap
        ${SMB_SRC_ROOT}/bin/default/lib/dbwrap
        ${SMB_SRC_ROOT}/libcli/security
        ${SMB_SRC_ROOT}/bin/default/libcli/security
        ${SMB_SRC_ROOT}/source4/heimdal/lib/wind
        ${SMB_SRC_ROOT}/bin/default/source4/heimdal/lib/wind
        ${SMB_SRC_ROOT}/lib/pthreadpool
        ${SMB_SRC_ROOT}/bin/default/lib/pthreadpool
        ${SMB_SRC_ROOT}/nsswitch
        ${SMB_SRC_ROOT}/bin/default/nsswitch
        ${SMB_SRC_ROOT}/lib/socket
        ${SMB_SRC_ROOT}/bin/default/lib/socket
        ${SMB_SRC_ROOT}/lib/crypto
        ${SMB_SRC_ROOT}/bin/default/lib/crypto
        ${SMB_SRC_ROOT}/lib/tdb
        ${SMB_SRC_ROOT}/bin/default/lib/tdb
        ${SMB_SRC_ROOT}/source4/cluster
        ${SMB_SRC_ROOT}/bin/default/source4/cluster
        ${SMB_SRC_ROOT}/source4/lib/stream
        ${SMB_SRC_ROOT}/bin/default/source4/lib/stream
        ${SMB_SRC_ROOT}/libcli/nbt
        ${SMB_SRC_ROOT}/bin/default/libcli/nbt
        ${SMB_SRC_ROOT}/source3/passdb
        ${SMB_SRC_ROOT}/bin/default/source3/passdb
        ${SMB_SRC_ROOT}/lib/compression
        ${SMB_SRC_ROOT}/bin/default/lib/compression
)

target_compile_definitions(
        ${TARGET_NAME}
        PRIVATE
        _SAMBA_BUILD_=4
        HAVE_CONFIG_H=1
        _GNU_SOURCE=1
        _XOPEN_SOURCE_EXTENDED=1
        __STDC_WANT_LIB_EXT1__=1
        _REENTRANT
        STATIC_pdb_MODULES=,,NULL
        "STATIC_pdb_MODULES_PROTO=_MODULE_PROTO()_MODULE_PROTO()extern void __pdb_dummy_module_proto(void)"
        STATIC_samba_passdb_MODULES=NULL
        "STATIC_samba_passdb_MODULES_PROTO=extern void __samba_passdb_dummy_module_proto(void)"
        STATIC_SERVER_MUTEX_MODULES=NULL
        "STATIC_SERVER_MUTEX_MODULES_PROTO=extern void __SERVER_MUTEX_dummy_module_proto(void)"
        STATIC_pdb_tdbsam_MODULES=NULL
        "STATIC_pdb_tdbsam_MODULES_PROTO=extern void __pdb_tdbsam_dummy_module_proto(void)"
        STATIC_GROUPDB_MODULES=NULL
        "STATIC_GROUPDB_MODULES_PROTO=extern void __GROUPDB_dummy_module_proto(void)"
        STATIC_pdb_smbpasswd_MODULES=NULL
        "STATIC_pdb_smbpasswd_MODULES_PROTO=extern void __pdb_smbpasswd_dummy_module_proto(void)"
)

target_compile_options(
        ${TARGET_NAME}
        PRIVATE
        -MMD
        -fPIC
        -fstack-protector-strong
        ${GCCDEFS}
)
